# Smart-LLM-Context-Manager

./: .gitignore  Dockerfile  QUICKSTART.md  README.md
backend/: .env.example  api.py  chat_manager.py  history_manager.py  llm.py  main.py  memory.py  pinecone_utils.py  pyproject.toml  requirements.txt
frontend/: README.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/[chatName]/: page.tsx
frontend/components/: ChatInput.tsx  ChatSelector.tsx  ContextPanel.tsx  HistoryPanel.tsx  VisualizationModal.tsx
frontend/types/: index.ts
